--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+  
 }
 
 .App-header {
@@ -27,7 +28,10 @@
 .App-link {
   color: #61dafb;
 }
-
+.musicname{
+  position: relative;
+ 
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
